syntax = "proto2";
package com.caidt.proto;

// --> Response
message Request {
    required int32 id = 1;
    required string token = 2;
    required bytes req = 3;
}
message Response {
    required int32 id = 1;
    required bytes resp = 2;
}

// 心跳检测 --> Pong
message Ping {
    required int64 clientMillis = 1;
}
message Pong {
    required int64 clientMillis = 1;
    required int64 serverMillis = 2;
}

// 登录请求 --> LoginResponse
message LoginRequest {
    required string username = 1;
    required string password = 2;
}
message LoginResponse {
    required int64 serverId = 1;
    required PlayerInfo player = 2;
}

// 玩家信息
message PlayerInfo {
    required int64 uid = 1;
    required string name = 2;
    optional string nickname = 3;
    optional int64 power = 4;
}
